# mercury

./: .dockerignore  .env.bak  .gitignore  CONTEXT.md  DOCKER_SETUP.md  Dockerfile  Makefile  README.md  TODO.md  TRIAGE_AGENT_IMPROVEMENTS.md  TRIAGE_TESTING_EXAMPLE.md  TRIAGE_VALIDATION_REPORT.md  VALIDATION_RESULTS.md  WINDOWS_SETUP.md  docker-compose.yml  env.template  evaluation.md  install_pgvector.ps1  install_prerequisites.ps1  log_parser.py  prometheus.yml  pyproject.toml  requirements.txt  set_env.ps1  setup_docker.sh  setup_windows.ps1  start_services.ps1  test_api.sh  test_secret_manager.sh  test_triage_agent.py  test_triage_example.sh  validate_triage_agent.py
ai_service/: __init__.py  guardrails.py  llm_client.py  main.py  models.py  policy.py  private_gateway_client.py  prompts.py  ranking.py  step_transformation.py
config/: classification_fallbacks.json  embeddings.json  error_classification_rules.csv  extraction_patterns.json  field_mappings.json  guardrails.json  incident_classification_rules.csv  ingestion.json  llm.json  policy.json  problem_keywords.json  retrieval.json  schemas.json  service_component_mapping.json  step_classification.json  symptom_vocabulary.csv  technical_terms.json  triage_prediction.json  workflow.json
db/: APPLY_SCHEMA_QUICKSTART.md  INDEX_STRATEGY.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  STORAGE_VECTOR_DESIGN_SUMMARY.md  connection.py  examples_storage_vector_design.sql  schema.sql  schema_logs.sql  schema_storage_vector_design.sql
ingestion/: __init__.py  chunker.py  classification.py  db_ops.py  embeddings.py  log_ingestion.py  main.py  models.py  normalizers.py
retrieval/: __init__.py  hybrid_search.py  incident_descriptions.py  influxdb_client.py  log_search.py  metrics.py  query_builders.py  query_enhancer.py  resolution_retrieval.py
runbooks/: Runbook - Database Alerts.docx  Runbook - High CPU Alerts.docx  Runbook - High Memory Alerts.docx  Runbook – High Volume or Disk Utilization.docx  (+1 more)
(+256 files in other folders)
